<resources>
    <string name="app_name">PlayslistShare</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="hint_name">Name</string>
    <string name="hint_link">Link</string>
    <string name="text_single">Single</string>
    <string name="text_album">Album</string>
    <string name="text_mix">Mix</string>
    <string name="text_share_playlist">Share Playlist</string>
    <string name="hint_full_name">Full Name</string>
    <string name="hint_email">Email</string>
    <string name="text_register">Register</string>
    <string name="title_playlist">Playlists</string>
    <string name="title_users">Users</string>
    <string name="title_settings">Settings</string>
    <string name="text_settings">Settings</string>
    <string name="text_playlist_name">Dj Blighty</string>
    <string name="text_no_users">No users</string>
    <string name="text_no_playlist">No Playlists found</string>
    <string name="error_playlist_name_required">Playlist name required</string>
    <string name="error_playlist_link_required">Playlist link required</string>
    <string name="title_songs">Songs</string>
    <string name="text_no_songs">No songs found</string>
    <string name="hint_song_name">Song Name</string>
    <string name="text_save_song">Save Song</string>
    <string name="hint_artist_name">Artsist Name</string>
    <string name="error_song_name_required">Song name is required</string>
    <string name="error_artist_name">Artist name is required</string>
    <string name="text_song_name">Kamikaze</string>
    <string name="text_user_playlist">Here\'s what this user has shared</string>
    <string name="text_playlist_desc">Here\'s who shared the playlist</string>
    <string name="text_select_owner">Select playlist owner</string>
    <string name="text_select_songs">Select songs in this album</string>
    <string name="text_playlist_song_desc">Here are the playlist this song belongs to</string>
    <string name="text_song_playlist_desc">Here are the songs in the playlist</string>
</resources>