<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="@dimen/fab_margin">

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:id="@+id/layoutName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editPlaylistName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_name"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:id="@+id/layoutLink"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/fab_margin"
        app:layout_constraintTop_toBottomOf="@id/layoutName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editPlaylistLink"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_link"/>
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tvUserLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_select_owner"
        android:textSize="16sp"
        android:textColor="@android:color/black"
        android:layout_marginTop="@dimen/fab_margin"
        app:layout_constraintTop_toBottomOf="@+id/layoutLink"
        app:layout_constraintStart_toStartOf="parent"/>

    <Spinner
        android:id="@+id/userSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        app:layout_constraintTop_toBottomOf="@id/tvUserLabel"/>


    <com.google.android.material.button.MaterialButtonToggleGroup
        android:id="@+id/btnGroupType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="6"
        android:layout_marginTop="@dimen/fab_margin"
        app:layout_constraintTop_toBottomOf="@id/userSpinner"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.button.MaterialButton
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:id="@+id/btnSingle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/text_single"/>
        <com.google.android.material.button.MaterialButton
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:id="@+id/btnAlbum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/text_album"/>
        <com.google.android.material.button.MaterialButton
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:id="@+id/btnMix"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/text_mix"/>


    </com.google.android.material.button.MaterialButtonToggleGroup>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layoutSongs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_marginTop="@dimen/fab_margin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnGroupType">

        <TextView
            android:id="@+id/tvSelectSongs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_select_songs"
            android:textColor="@android:color/black"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintStart_toEndOf="parent"/>

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/chipGroupSongs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvSelectSongs"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent">
        </com.google.android.material.chip.ChipGroup>
    </androidx.constraintlayout.widget.ConstraintLayout>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSharePlaylist"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/layoutSongs"
        android:text="@string/text_share_playlist"
        android:layout_marginTop="@dimen/fab_margin"/>

</androidx.constraintlayout.widget.ConstraintLayout>