<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/fab_margin"
    android:background="@color/colorBackground"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:id="@+id/layoutSongName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editSongName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_song_name"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:id="@+id/layoutArtistName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/fab_margin"
        app:layout_constraintTop_toBottomOf="@id/layoutSongName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editArtistName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_artist_name"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSaveSong"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_save_song"
        android:layout_marginTop="@dimen/fab_margin"
        app:layout_constraintTop_toBottomOf="@id/layoutArtistName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>